SourceMetaData/src/objects/Related_Ticket__c.object
<CustomObject>
    <description>A lookup table to enable many-to-many ticket inter-relationships.</description>
    <fields>
        <fullName>Ticket_From__c</fullName>
        <description>The ticket that the relationship is from (related list not used on page layouts)</description>
        <inlineHelpText>The ticket that the relationship is from (related list not used on page layouts)</inlineHelpText>
        <label>Ticket From</label>
        <referenceTo>Ticket__c</referenceTo>
        <relationshipLabel>Related Tickets (From)</relationshipLabel>
        <relationshipName>Tickets_From</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ticket_To_Owner__c</fullName>
        <description>The current owner of the ticket that is linked to</description>
        <formula>IF (
    !ISBLANK( Ticket_To__r.Owner:User.Username ),  
    Ticket_To__r.Owner:User.FirstName +&quot; &quot;+  Ticket_To__r.Owner:User.LastName,
    &quot;Queue: &quot;+ Ticket_To__r.Owner:Queue.QueueName  
)</formula>
        <inlineHelpText>The current owner of the ticket that is linked to</inlineHelpText>
        <label>Ticket To Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_To_Status__c</fullName>
        <description>The status of the Ticket that has been linked to</description>
        <formula>TEXT(Ticket_To__r.GLOBAL_Ticket_Status__c)</formula>
        <inlineHelpText>The status of the Ticket that has been linked to</inlineHelpText>
        <label>Ticket To Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_To_Summary__c</fullName>
        <description>The summary of the ticket that has been linked to</description>
        <formula>Ticket_To__r.CMP_Summary__c</formula>
        <inlineHelpText>The summary of the ticket that has been linked to</inlineHelpText>
        <label>Ticket To Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_To__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The ticket that the relationship is to (related list used on page layouts)</description>
        <inlineHelpText>The ticket that the relationship is to (related list used on page layouts)</inlineHelpText>
        <label>Ticket To</label>
        <referenceTo>Ticket__c</referenceTo>
        <relationshipLabel>Related Tickets</relationshipLabel>
        <relationshipName>Tickets_To</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Related Ticket</label>
    <nameField>
        <displayFormat>RelTckt{000000}</displayFormat>
        <label>Related Tickets Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Tickets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>